kustomize-units/kyverno-policies/node-annotation-postcommandcheck/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-postcommands-node-annotation
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-postcommands-node-annotation
      match:
        resources:
          kinds:
            - Node
      validate:
        message: "Node is missing the postCommand annotation"
        pattern:
          metadata:
            annotations:
              post-commands-executed: "true"
